--- a/repass/generator/templates/generator/home.html
+++ b/repass/generator/templates/generator/home.html
@@ -1,1 +1,15 @@
-<h1> wow i am so good <h1>
+<h1> Password Generator </h1>
+
+<form action="password">
+	<select name="length">
+		<option value="6">6</option>
+		<option value="7">7</option>
+		<option value="8">8</option>			
+
+
+	</select>
+
+	<input type="submit" value="Generated Password">
+
+
+</form>
