--- a/repass/generator/templates/generator/home.html
+++ b/repass/generator/templates/generator/home.html
@@ -1,6 +1,6 @@
 <h1> Password Generator </h1>
 
-<form action="password">
+<form action="{% url 'passwor' %}">
 	<select name="length">
 		<option value="6">6</option>
 		<option value="7">7</option>
