--- a/repass/generator/templates/generator/home.html
+++ b/repass/generator/templates/generator/home.html
@@ -26,5 +26,13 @@
 
 
 	<input type="submit" value="Generated Password">
+
+
 	
 </form>
+
+<form action="{% url 'aboutpage' %}">
+<input type = "submit" value  = "About page">
+</form>
+
+
