--- a/repass/generator/templates/generator/Password.html
+++ b/repass/generator/templates/generator/Password.html
@@ -1,3 +1,11 @@
-<h1>your password is : </h1>
-<h2>{{ password }}<h2>
-<a href="{% url 'home' %}">HOME</a>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<div class = "container text-center">
+
+
+
+<h1> your password is : </h1>
+<h2 class ="alert alert-success">{{ password }}<h2>
+<a href="{% url 'home' %}" class ="alert alert-warning">HOME</a>
+</div>
