--- a/repass/generator/templates/generator/home.html
+++ b/repass/generator/templates/generator/home.html
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<div class="container text-center">
+
 <h1> Password Generator </h1>
 
 <form action="{% url 'passwor' %}">
@@ -12,7 +17,7 @@
 		<option value="13">13</option>
 		<option value="14">14</option>
 		<option value="15">15</option>
-		</select>
+		</select> Length
 	
 	<br>
 	<input type='checkbox' name ='Uppercase'> Uppercase
@@ -25,7 +30,8 @@
 	<br>
 
 
-	<input type="submit" value="Generated Password">
+	<input type="submit" value="Generated Password" class="btn btn-primary">
+
 
 
 	
@@ -35,4 +41,5 @@
 <input type = "submit" value  = "About page">
 </form>
 
+</div>
 
